--- a/index.html
+++ b/index.html
@@ -4,41 +4,26 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Space Science Website Template</title>
+	<title>Thor - The Revelation</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script src="js/mobile.js" type="text/javascript"></script>
 </head>
 <body>
 	<div id="page">
-		<div id="header">
+		<div id="header" style="position: fixed">
 			<div>
 				<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
 				<ul id="navigation">
 					<li class="selected">
-						<a href="index.html">Home</a>
+						<a href="index.html" style="margin-left: 200px;">Home</a>
 					</li>
 					<li>
 						<a href="about.html">About</a>
 					</li>
-					<li class="menu">
-						<a href="projects.html">Projects</a>
-						<ul class="primary">
-							<li>
-								<a href="proj1.html">proj 1</a>
-							</li>
-						</ul>
-					</li>
-					<li class="menu">
-						<a href="blog.html">Blog</a>
-						<ul class="secondary">
-							<li>
-								<a href="singlepost.html">Single post</a>
-							</li>
-						</ul>
-					</li>
+					
 					<li>
-						<a href="contact.html">Contact</a>
+						<a href="projects.html">Characters</a>
 					</li>
 				</ul>
 			</div>
@@ -47,10 +32,10 @@
 			<div class="header">
 				<div>
 					<img src="images/satellite.png" alt="" class="satellite">
-					<h1>SOYUZ TMA-M</h1>
-					<h2>SPACECRAFT</h2>
-					<a href="blog.html" class="more">Read More</a>
-					<h3>FEATURED PROJECTS</h3>
+					<h1>THOR</h1>
+					<h2><small>the revelation</small></h2>
+					<a href="blog.html" class="more">Watch Movie</a>
+					<h3>FEATURED CHARACTERS</h3>
 					<ul>
 						<li>
 							<a href="projects.html"><img src="images/project-image1.jpg" alt=""></a>
@@ -77,20 +62,20 @@
 				<div>
 					<ul>
 						<li>
-							<h1>FEATURED VIDEO</h1>
-							<a href="blog.html"><img src="images/mars-rover.jpg" alt=""><span></span></a>
+							<h1 style="background: #000">FEATURED VIDEO</h1>
+							<a href="blog.html"><img style="border-radius: 10px;" src="images/mars-rover.jpg" alt=""><span></span></a>
 						</li>
 						<li>
-							<h1>LATEST BLOG</h1>
+							<h1 style="background: #000">LATEST BLOG</h1>
 							<ul>
-								<li>
-									<a href="blog.html"><img src="images/finding-planet.jpg" alt=""></a>
+								<li style="background: #000">
+									<a href="blog.html"><img style="padding-top: 10px;padding-left: 10px;" src="images/finding-planet.jpg" alt=""></a>
 									<h1>FINDING PLANET X-123</h1>
 									<span>FEBRUARY 6, 2023</span>
 									<a href="blog.html" class="more">Read More</a>
 								</li>
-								<li>
-									<a href="blog.html"><img src="images/new-satellitedish.jpg" alt=""></a>
+								<li style="background: #000">
+									<a href="blog.html"><img style="padding-left: 10px;"src="images/new-satellitedish.jpg" alt=""></a>
 									<h1>NEW SATELLITE DISH</h1>
 									<span>FEBRUARY 3, 2023</span>
 									<a href="blog.html" class="more">Read More</a>
@@ -104,7 +89,7 @@
 		<div id="footer">
 			<div class="connect">
 				<div>
-					<h1>FOLLOW OUR  MISSIONS ON</h1>
+					<h1>FOLLOW OUR  MOVIE ON</h1>
 					<div>
 						<a href="http://freewebsitetemplates.com/go/facebook/" class="facebook">facebook</a>
 						<a href="http://freewebsitetemplates.com/go/twitter/" class="twitter">twitter</a>
@@ -115,7 +100,7 @@
 			</div>
 			<div class="footnote">
 				<div>
-					<p>&copy; 2023 BY SPACE PROSPECTION | ALL RIGHTS RESERVED</p>
+					<p>&copy; 2016 BY BSIT-3B | ALL RIGHTS RESERVED</p>
 				</div>
 			</div>
 		</div>
